Bug 88721 - Insert>name>create (left column) freezes if name is R or C (or address specifier)
Summary: Insert>name>create (left column) freezes if name is R or C (or address specif...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: medium critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.5.0 target:4.3.7 target:4.4...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-01-22 20:20 UTC by sheepmud
Modified: 2015-01-23 15:26 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sheepmud 2015-01-22 20:20:25 UTC
Highlight two adjacent columns (I used 3 rows).  Text in left column. Right column empty (tried it with numbers, same result). Insert>name>create (checked 'left column' is default). Enter. and then...

SPREADSHEET CRASHES.  Eventually times out to "stopped responding" error (after hitting the 'close' X) and have to close, losing any unsaved updates.  The recovery, upon re-opening, works. Tried it a few times; always same result.
Comment 1 sheepmud 2015-01-22 20:31:09 UTC
An update...it seems to specifically crash when the letter 'R' is in the left column (what I want the right value assigned to as a name). Weird... I haven't tested other values.  I know the letters 'V' and 'I' both do not crash.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2015-01-22 22:17:07 UTC
Not a crash, but freezes (endless loop).

R and C are special in the R1C1 address reference syntax and can't be used as names and would be adjusted to _R and _C. The check triggers an endless loop though..
Comment 3 Commit Notification 2015-01-22 22:44:02 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=34f8864c9af563cbcd34352b3edefc67ba235ae7

Resolves: fdo#88721 correct negated condition in range name validation

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2015-01-22 23:09:10 UTC
Pending review
https://gerrit.libreoffice.org/14120 for 4-4
https://gerrit.libreoffice.org/14121 for 4-3
Comment 5 Commit Notification 2015-01-23 01:24:33 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebe1b1dd8d77e04975854c4e0f9a43dcb5e15a08&h=libreoffice-4-3

Resolves: fdo#88721 correct negated condition in range name validation

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-01-23 01:24:37 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd2434655c94814598daa8105cab0af314a6adf7&h=libreoffice-4-4

Resolves: fdo#88721 correct negated condition in range name validation

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-01-23 15:26:43 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e6d4d4941db42184d7e7b68960a1affd7c61101&h=libreoffice-4-3-6

Resolves: fdo#88721 correct negated condition in range name validation

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.