Resolves: fdo#88721 correct negated condition in range name validation

Fallout of 72b9dd277bab328c4d9227439e27e8c29b43fa7d String to OUString
conversion.

Change-Id: I89a90da11790efba9e8ce4c9464dfca50b08c3ce